# browsedocs

./: .gitignore  README.md  pyproject.toml
browsedocs/: app.py  html.py  packages.py
tests/: test_packages.py
