[tool.poetry]
name = "browsedocs"
version = "0.1.0"
description = ""
authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.240"
black = "^23.1.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
