[tool.poetry]
name = "browsedocs"
version = "0.1.0"
description = "A simple command line utility to list and browse documentation of python packages."
authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
homepage = "https://github.com/ggozad/browsedocs"
readme = "README.md"

[tool.poetry.scripts]
browsedocs = "browsedocs.app:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
markdown = "^3.4.1"
docutils = "^0.19"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.240"
black = "^23.1.0"
pdbpp = "^0.10.3"
pytest = "^7.2.1"

[tool.ruff]

line-length = 88

# Enable Flake's "E" and "F" codes by default and "I" for sorting imports.
select = ["E", "F", "I"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {"__init__.py"=["F401","F403"], "steps.py"=["F401","F403"],"css.py"=["E731"]}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
